[project]
name = "wander-s-code"
version = "0.1.0"
description = "wander_specter s learning records"
authors = [
    {name = "wander_specter"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "gymnasium[classic-control] (>=1.2.0,<2.0.0)",
    "gymnasium-robotics (>=1.3.1,<2.0.0)",
    "wandb (>=0.21.0,<0.22.0)",
    "setuptools (>=80.9.0,<81.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
